style (General) font, images, colors. feat (filters) filters funtional price min to max

--- a/src/components/ListCascade/listCascade.scss
+++ b/src/components/ListCascade/listCascade.scss
@@ -1,20 +1,22 @@
 .listCascade {
-    min-width: 260px;
-    // background-color: red;
+    width: 300px;
     height: auto;
 
     &--title {
+        font-family: Roboto;
         font-style: normal;
         font-weight: bold;
         font-size: 36px;
         line-height: 42px;
-
         color: #000000;
     }
     .list{
         display: flex;
         flex-direction: column;
         padding: 20px;
+        .button {
+            cursor: pointer;
+        }
         .content {
             margin-left: 5px;
         }
@@ -22,13 +24,17 @@
             display: flex;
             height: 47px;
             &-title {
+                font-family: Roboto;
                 margin-top:5px;
                 font-style: normal;
                 font-weight: normal;
                 font-size: 14px;
                 line-height: 16px;
+                    margin-top: 5px;
+                
             }
             .category {
+                font-family: Roboto;
                 font-style: normal;
                 font-weight: bold;
                 font-size: 17px;
@@ -42,6 +48,17 @@
             width: 100%;
 
         }
+        .cont {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+            margin-bottom: 30px;
+            &_color{
+                width: 19px;
+                height: 28px;
+                box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+            }
+        }
         .ant-select-single:not(.ant-select-customize-input) .ant-select-selector {
             background-color: transparent;
             border: 1px solid transparent;
@@ -49,7 +66,7 @@
                     
         }
         .ant-select-single.ant-select-show-arrow .ant-select-selection-item, .ant-select-single.ant-select-show-arrow .ant-select-selection-placeholder {
-            padding-right: 100px;
+            width: 137px;
         }
         .price{
             display: flex;
@@ -78,6 +95,10 @@
         box-shadow: rgba(255, 255, 255 ,0) 0px 3px 12px !important; 
         padding: 3px !important;
         justify-content: flex-start !important;
+        width: 100% !important;
+        span {
+            margin: 5px;
+        }
     }
     .ant-slider-step {
         background: #8B8B8B;
