--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -1,2 +1,3 @@
 @import "../../components/TabsHead/TabsHead.scss";
 @import "../../components/listCascade/listCascade.scss";
+@import "../../components/ModalDetailProduct/ModalDetailProduct.scss";
