--- a/src/components/TabsHead/TabsHead.scss
+++ b/src/components/TabsHead/TabsHead.scss
@@ -27,6 +27,11 @@
         right: 45px;
         display: flex;
         height: 60px;
+        .btn-transparent {
+            border-color: transparent;
+            background-color: transparent;
+            
+        }
         &_contIcon{
             display: flex;
             justify-content: space-between;
@@ -45,4 +50,83 @@
             height: 93px;
         }
     }
+   
+}
+
+.car {
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+
+    &_img{
+        width: 80px;
+        height: 80px;
+        object-fit: cover;
+    }
+    &_name {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 19px;
+        color: #000000;
+        margin: 10px 0;
+    }
+    &_ref{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 12px;
+        color: #929292;
+    }
+    &_numRef{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 10px;
+        line-height: 12px;
+        color: #000000;
+        margin-bottom: 15px;
+    }
+    &_btn{
+        margin-bottom: 10px;
+        height: 40px !important;
+        font-weight: bold !important;
+        font-size: 16px !important;
+        font-family: Roboto !important;
+
+        &-shopy{
+            border: 1px solid #000000 !important;
+            color: #000000 !important;
+        }
+
+        &-check{
+            background-color: #1C69D4 !important;
+            color: #ffffff !important;
+        }
+        
+
+    }
+    &_cont-check {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .img-check{
+            margin-right: 5px;
+        }
+    }
+    span.anticon.anticon-shopping-cart {
+        font-size: 19px;
+        font-weight: bold;
+    }
+}
+
+.ant-popover-inner-content {
+    margin-top: 25px;
+}
+.ant-popover-placement-bottom > .ant-popover-content > .ant-popover-arrow {
+    width: 60px;
+    height: 60px;
+    background-color: #ffffff;
 }
