--- a/src/components/TabsHead/TabsHead.scss
+++ b/src/components/TabsHead/TabsHead.scss
@@ -1,4 +1,25 @@
+$small: 440px;
+$s-medium: 570px;
+$medium: 761px; 
+$large: 960px;
+$x-large: 1060px;
+$xx-large: 1250px;
+
+
 .TabsHead{
+    .menu{
+        display: none;
+        width: 50px;
+        height: 75px;
+        margin-top: 18px;
+        .anticon {
+            font-size: 21px;
+            color: #000000;
+        }
+        .ant-menu-vertical, .ant-menu-vertical-left {
+            border-right: 0px solid #f0f0f0;
+        }
+    }
     .ant-tabs > .ant-tabs-nav, .ant-tabs > div > .ant-tabs-nav {
         height: 70px;
         padding: 1px 25px;
@@ -30,7 +51,16 @@
         .btn-transparent {
             border-color: transparent;
             background-color: transparent;
-            
+            &--cart {
+                /* background: red; */
+                /* height: 104%; */
+                display: flex;
+                justify-content: space-between;
+                width: 71px;
+                align-items: center;
+                font-size: 13px;
+                font-weight: bold;
+            }
         }
         &_contIcon{
             display: flex;
@@ -50,6 +80,22 @@
             height: 93px;
         }
     }
+    @media (max-width: $large) {
+        .menu{
+            display: grid;
+        }
+        .rigth_contIcon {
+             justify-content: space-around;
+         }
+     }
+     @media (max-width: $s-medium) {
+         .rigth_contIcon {
+             justify-content: flex-end;
+         }
+         .rigth {
+            right: 10px;
+        } 
+      }
    
 }
 
@@ -57,7 +103,9 @@
     width: 250px;
     display: flex;
     flex-direction: column;
-
+    .ant-empty {
+        margin-top: 20px;
+    }
     &_img{
         width: 80px;
         height: 80px;
@@ -70,7 +118,16 @@
         font-size: 16px;
         line-height: 19px;
         color: #000000;
-        margin: 10px 0;
+        margin: 12px 0;
+    }
+    &_price{
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 12px;
+        line-height: 14px;
+        /* identical to box height */
+        color: #000000;
     }
     &_ref{
         font-family: Roboto;
@@ -95,7 +152,9 @@
         font-weight: bold !important;
         font-size: 16px !important;
         font-family: Roboto !important;
-
+        display: flex;
+        justify-content: center;
+        align-items: center;
         &-shopy{
             border: 1px solid #000000 !important;
             color: #000000 !important;
@@ -112,6 +171,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin: 10px 0;
         .img-check{
             margin-right: 5px;
         }
@@ -119,9 +179,29 @@
     span.anticon.anticon-shopping-cart {
         font-size: 19px;
         font-weight: bold;
+        margin-right: 10px;
     }
 }
 
+.ant-menu-submenu-vertical > .ant-menu-submenu-title .ant-menu-submenu-arrow, .ant-menu-submenu-vertical-left > .ant-menu-submenu-title .ant-menu-submenu-arrow, .ant-menu-submenu-vertical-right > .ant-menu-submenu-title .ant-menu-submenu-arrow, .ant-menu-submenu-inline > .ant-menu-submenu-title .ant-menu-submenu-arrow {
+    display: none;
+}
+
+li.ant-menu-item.ant-menu-item-only-child {
+    border-bottom: 1px solid #dadada;
+}
+ul.ant-menu-item-group-list {
+    padding-left: 26px;
+}
+.ant-menu-item-group-title {
+    display: none;
+}
+li.ant-menu-item-group {
+    width: 300px;
+    margin-left: 0;
+    left: 0;
+    padding-left: 14px;
+}
 .ant-popover-inner-content {
     margin-top: 25px;
 }
@@ -129,4 +209,16 @@
     width: 60px;
     height: 60px;
     background-color: #ffffff;
+}
+
+
+
+@media (max-width: $large) {
+   .ant-tabs-nav{
+       display: none !important;
+   }
+   .icon-user {
+       display: none !important;
+   }
+     
 }
