--- a/src/sass/_all.scss
+++ b/src/sass/_all.scss
@@ -4,4 +4,4 @@
 @import "./utils/variables";
 @import "./vendors/_all.scss";
 @import "./modules/all";
-@import "./utils/variables";
+@import "./utils/all";
