--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -1,3 +1,5 @@
 @import "../../components/TabsHead/TabsHead.scss";
 @import "../../components/listCascade/listCascade.scss";
 @import "../../components/ModalDetailProduct/ModalDetailProduct.scss";
+@import "../../components/Pagination/Pagination.scss";
+@import "../../components/Footer/Footer.scss";
