--- a/src/sass/modules/_all.scss
+++ b/src/sass/modules/_all.scss
@@ -1,2 +1,3 @@
 @import "../../scenes/Home/Home.scss";
-@import "../../scenes/Lifestyle/Lifestyle.scss"
+@import "../../scenes/Lifestyle/Lifestyle.scss";
+@import "../../scenes/Car/Car.scss";
