--- a/src/scenes/Lifestyle/Lifestyle.scss
+++ b/src/scenes/Lifestyle/Lifestyle.scss
@@ -1,3 +1,10 @@
+$small: 440px;
+$s-medium: 570px;
+$medium: 761px; 
+$large: 960px;
+$x-large: 1060px;
+$xx-large: 1250px;
+
 .Lifestyle{
 
     display: flex;
@@ -7,12 +14,34 @@
         width: 90%;
     }
 
+    .head {
+        margin: 23px 0px;
+        
+        justify-content: space-between;
+        border-bottom: 1px solid #DCDCDC;
+        padding: 20px;
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        color: #000000;
+        align-items: center;
+        display: none;
+
+        .now {
+            font-size: 36px;
+            line-height: 42px;
+            
+        }
+        .filters{
+            border-color: transparent;
+        }
+        
+    }
+
     &_href {
         color: #000000;
         text-align: left;
         padding: 14px 76px;
-
-
         .now {
             margin-left: 7px;
             font-weight: bold;
@@ -161,4 +190,48 @@
                     color: #ffffff;
                 }
     }
+
+.footer{
+    display: none;
+}
+    @media (max-width: $s-medium) {
+        .head{
+            display: flex;
+        }
+        &_href {
+            display: none;
+        }
+        .cant {
+            display: none;
+        }
+        .ListCascade-content {
+            display: none;
+        }
+        .Lifestyle_Container--box__head {
+            display: flex;
+            justify-content: flex-end;
+        }
+        .now {
+             margin-left: 0px;
+        }
+        &_cont {
+            width:100%;
+        }
+        .Lifestyle_Container__store--item {
+            margin: 3px;
+            width: 197px;
+            .img {
+                width: 197px;
+                height: 161px;
+                margin-bottom: 15px;
+                object-fit: contain;
+            }
+        }
+        .footer{
+            display: unset;
+        }
+     }
+
+
+    
 }
