style (record) record of shopy in the car

--- a/src/sass/components/_all.scss
+++ b/src/sass/components/_all.scss
@@ -3,3 +3,4 @@
 @import "../../components/ModalDetailProduct/ModalDetailProduct.scss";
 @import "../../components/Pagination/Pagination.scss";
 @import "../../components/Footer/Footer.scss";
+@import "../../components/Record/Record.scss";
