--- a/src/components/TabsHead/TabsHead.scss
+++ b/src/components/TabsHead/TabsHead.scss
@@ -200,7 +200,7 @@ li.ant-menu-item-group {
     width: 300px;
     margin-left: 0;
     left: 0;
-    padding-left: 14px;
+    padding-left: 0px;
 }
 .ant-popover-inner-content {
     margin-top: 25px;
@@ -211,7 +211,41 @@ li.ant-menu-item-group {
     background-color: #ffffff;
 }
 
+.ant-menu-vertical.ant-menu-sub .ant-menu-item, .ant-menu-vertical-left.ant-menu-sub .ant-menu-item, .ant-menu-vertical-right.ant-menu-sub .ant-menu-item {
+    left: 0;
+    margin-left: 0;
+    border-right: 0;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    color: #000000;
+}
+a{
+    color: #000000 !important;
+}
+.ant-menu-vertical .ant-menu-item:not(:last-child) {
+    margin-bottom: 8px;
+    margin-left: 10px;
+}
+.ant-menu-item-group{
+    .btn-menu{
+        background-color: #1C69D4;
+        height: 76px !important;
+        margin-top: 78px !important;
+        margin-bottom: 0px !important;
+        padding: 0 !important;
+        button{
+            width: 100%;
+            height: 100%;
+            border-color: #1C69D4;
+            background: #1C69D4;
+            color: #ffffff;
+            border-radius: 0;
+        }
 
+    }
+}
 
 @media (max-width: $large) {
    .ant-tabs-nav{
