--- a/src/sass/base/_generic.scss
+++ b/src/sass/base/_generic.scss
@@ -7,3 +7,14 @@
 .rigth_contIcon svg {
     color: #000000 !important;
 }
+
+@font-face {
+    font-family: "Roboto";
+    src: url("./../../assets/fonts/Roboto-Black.ttf") format("truetype");
+    font-weight: 500;
+    font-style: normal;
+}
+
+@import url("https://fonts.googleapis.com/css?family=Lato");
+ @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
+ @import url("https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap");
